creando parrafo 1 desde desdemaster

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <body>
     <h1>Adjuntar todo</h1>
     <p>Nuestro primer scritp</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Quis explicabo soluta, nam voluptatum incidunt officia illo 
+      perspiciatis ratione labore rem eum?</p>
     <ul>
       <li><a href="holaMundo.js">hola Mundo</a></li>
     </ul>
