Creando parrafo dos desde diseñador 1

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <ul>
       <li><a href="holaMundo.js">hola Mundo</a></li>
     </ul>
+    <p>Parrafo creado desde Diseñador1</p>
   </body>
 </html>
