Agregando hoja de estilos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     -->
     <script type="text/javascript" src="js/12-ejercicio02.js"></script>
   </head>
+    <style href="miEstylo.css>
   <body>
     <h1>Adjuntar todo</h1>
     <p>Nuestro primer scritp</p>
